<resources>
    <string name="app_name">PMUG02_16_2021_Kotlin</string>
    <string name="action_settings">Settings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_a_toast_message">Show a toast message!</string>
    <string name="show_a_snackbar_message">Show a snackbar message!</string>
    <string name="show_a_notification">Show a notification!</string>
    <string name="start_a_job_for_1_minute">Start a job for 1 minute</string>
    <string name="start_a_periodic_job_every_minute">Start a periodic job every minute</string>
    <string name="navigate_to_new_activity">Navigate to new activity</string>
    <string name="cancel_work">Cancel work</string>
</resources>