<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/action_show_toast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/show_a_toast_message" />

            <Button
                android:id="@+id/action_show_snackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/show_a_snackbar_message" />

            <Button
                android:id="@+id/action_show_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/show_a_notification" />

            <Button
                android:id="@+id/action_start_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/start_a_job_for_1_minute" />

            <Button
                android:id="@+id/action_start_periodic_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/start_a_periodic_job_every_minute" />

            <Button
                android:id="@+id/action_cancel_Work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/cancel_work" />

            <Button
                android:id="@+id/action_navigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/navigate_to_new_activity" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>